tests/ui/conflict_skip.stderr
error: expected identifier, found `::`
 --> tests/ui/conflict_skip.rs:9:10
  |
9 | #[derive(DtoFrom)]
  |          ^^^^^^^
  |          |
  |          expected identifier
  |          while parsing this struct
  |
  = note: this error originates in the derive macro `DtoFrom` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
 --> tests/ui/conflict_skip.rs:9:10
  |
9 | #[derive(DtoFrom)]
  |          ^^^^^^^

error[E0063]: missing field `id` in initializer of `Dto`
 --> tests/ui/conflict_skip.rs:9:10
  |
9 | #[derive(DtoFrom)]
  |          ^^^^^^^ missing `id`
  |
  = note: this error originates in the derive macro `DtoFrom` (in Nightly builds, run with -Z macro-backtrace for more info)
